--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.9",
-    "@mui/material": "^5.14.10",
-    "@mui/styled-engine-sc": "^5.14.10",
+    "@mui/material": "^5.14.13",
+    "@mui/styled-engine-sc": "^5.14.12",
+    "@mui/x-date-pickers": "^6.16.2",
     "@react-google-maps/api": "^2.19.2",
+    "dayjs": "^1.11.10",
     "html2canvas": "^1.4.1",
     "next": "^13.5.2",
     "react": "^18.2.0",
