--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,10 +7,9 @@ steps:
         "docker pull gcr.io/insurance-hub-397016/aiunited:latest || exit 0",
       ]
   - name: "gcr.io/cloud-builders/docker"
-    args:
-      ["build", "-t", "gcr.io/insurance-hub-397016/aiunited:$SHORT_SHA", "."]
+    args: ["build", "-t", "gcr.io/insurance-hub-397016/aiunited:$latest", "."]
   - name: "gcr.io/cloud-builders/docker"
-    args: ["push", "gcr.io/insurance-hub-397016/aiunited:$SHORT_SHA"]
+    args: ["push", "gcr.io/insurance-hub-397016/aiunited:latest"]
   - name: "gcr.io/cloud-builders/gcloud"
     args:
       [
@@ -20,6 +19,6 @@ steps:
         "aiunited",
         "--region=us-east1",
         "--platform=managed",
-        "--image=gcr.io/insurance-hub-397016/aiunited:$SHORT_SHA",
+        "--image=gcr.io/insurance-hub-397016/aiunited:latest",
       ]
 images: ["gcr.io/insurance-hub-397016/aiunited:latest"]
