--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,15 @@
 steps:
   - name: "gcr.io/cloud-builders/docker"
+    entrypoint: "bash"
+    args:
+      [
+        "-c",
+        "docker pull  gcr.io/insurance-hub-397016/aiunited:latest || exit 0",
+      ]
+  - name: "gcr.io/cloud-builders/docker"
     args:
       [
         "build",
-        "-t",
-        "gcr.io/insurance-hub-397016/aiunited:${SHORT_SHA}",
         "-t",
         "gcr.io/insurance-hub-397016/aiunited:latest",
         "--cache-from",
@@ -12,7 +17,7 @@ steps:
         ".",
       ]
   - name: "gcr.io/cloud-builders/docker"
-    args: ["push", "gcr.io/insurance-hub-397016/aiunited:${SHORT_SHA}"]
+    args: ["push", "gcr.io/insurance-hub-397016/aiunited:latest"]
   - name: "gcr.io/cloud-builders/gcloud"
     args:
       [
@@ -22,10 +27,6 @@ steps:
         "aiunited",
         "--region=us-east1",
         "--platform=managed",
-        "--image=gcr.io/insurance-hub-397016/aiunited:${SHORT_SHA}",
+        "--image=gcr.io/insurance-hub-397016/aiunited:latest",
       ]
-images:
-  [
-    "gcr.io/insurance-hub-397016/aiunited:${SHORT_SHA}",
-    "gcr.io/insurance-hub-397016/aiunited:latest",
-  ]
+images: ["gcr.io/insurance-hub-397016/aiunited:latest"]
