--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^13.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-iframe": "^1.8.5",
     "react-intersection-observer": "^9.5.2",
     "react-jotform-embed": "^1.1.3",
     "react-swipeable-views-react-18-fix": "^0.14.1",
