--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.14.13",
     "@mui/styled-engine-sc": "^5.14.12",
     "@mui/x-date-pickers": "^6.16.2",
+    "@next/bundle-analyzer": "^14.0.3",
     "@react-google-maps/api": "^2.19.2",
     "dayjs": "^1.11.10",
     "html2canvas": "^1.4.1",
