--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "sitemap": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -33,6 +34,7 @@
     "@types/react-dom": "18.0.4",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
+    "next-sitemap": "^4.2.3",
     "ts-loader": "^9.5.0",
     "typescript": "^4.6.4"
   }
