--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "sitemap": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -19,6 +18,7 @@
     "@next/bundle-analyzer": "^14.0.3",
     "@react-google-maps/api": "^2.19.2",
     "dayjs": "^1.11.10",
+    "fs": "^0.0.1-security",
     "next": "^13.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -34,7 +34,6 @@
     "@types/react-dom": "18.0.4",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
-    "next-sitemap": "^4.2.3",
     "ts-loader": "^9.5.0",
     "typescript": "^4.6.4"
   }
