--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/x-date-pickers": "^6.16.2",
     "@react-google-maps/api": "^2.19.2",
     "dayjs": "^1.11.10",
+    "marked": "^11.1.0",
     "next": "^13.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,13 +25,13 @@
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.0.3",
     "@types/node": "17.0.34",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "ts-loader": "^9.5.0",
-    "@next/bundle-analyzer": "^14.0.3",
     "typescript": "^4.6.4"
   }
 }
