--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,11 +4,15 @@ steps:
       [
         "build",
         "-t",
-        "gcr.io/insurance-hub-397016/${_SERVICE_NAME}:$SHORT_SHA",
+        "us-central1-docker.pkg.dev/insurance-hub-397016/${_SERVICE_NAME}:$SHORT_SHA",
         ".",
       ]
   - name: "gcr.io/cloud-builders/docker"
-    args: ["push", "gcr.io/insurance-hub-397016/${_SERVICE_NAME}:$SHORT_SHA"]
+    args:
+      [
+        "push",
+        "us-central1-docker.pkg.dev/insurance-hub-397016/${_SERVICE_NAME}:$SHORT_SHA",
+      ]
   - name: "gcr.io/cloud-builders/gcloud"
     args:
       [
@@ -18,5 +22,5 @@ steps:
         "${_SERVICE_NAME}",
         "--region=us-east1",
         "--platform=managed",
-        "--image=gcr.io/insurance-hub-397016/${_SERVICE_NAME}:$SHORT_SHA",
+        "--image=us-central1-docker.pkg.dev/insurance-hub-397016/${_SERVICE_NAME}:$SHORT_SHA",
       ]
