--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,32 +1,17 @@
 steps:
   # Check if the Artifact Registry repository exists
   - name: "gcr.io/cloud-builders/gcloud"
-    args:
-      [
-        "artifacts",
-        "repositories",
-        "describe",
-        "us-central1-docker.pkg.dev/insurance-hub-397016/${_SERVICE_NAME}",
-      ]
-    id: check_repository
     entrypoint: bash
-    env:
-      - "CLOUDSDK_CORE_DISABLE_PROMPTS=1" # Disable prompts to avoid blocking
-  # If repository doesn't exist, create it
-  - name: "gcr.io/cloud-builders/gcloud"
     args:
-      [
-        "artifacts",
-        "repositories",
-        "describe",
-        "us-central1-docker.pkg.dev/insurance-hub-397016/${_SERVICE_NAME}",
-      ]
-    id: create_repository
-    entrypoint: bash
-    env:
-      - "CLOUDSDK_CORE_DISABLE_PROMPTS=1" # Disable prompts to avoid blocking
-    waitFor: ["check_repository"]
-    continueOnError: true # Continue even if the repository creation fails
+      - "-c"
+      - |
+        if gcloud artifacts repositories describe us-central1-docker.pkg.dev/insurance-hub-397016/${_SERVICE_NAME} >/dev/null 2>&1; then
+          echo "Repository exists."
+        else
+          echo "Repository does not exist. Creating..."
+          gcloud artifacts repositories create ${_SERVICE_NAME} --repository-format=docker \
+            --location=us-central1 --project=insurance-hub-397016
+        fi
   # Build and push the Docker image
   - name: "gcr.io/cloud-builders/docker"
     args:
