--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,11 +5,11 @@ steps:
     args:
       - "-c"
       - |
-        if gcloud artifacts repositories describe us-central1-docker.pkg.dev/insurance-hub-397016/${_SERVICE_NAME} >/dev/null 2>&1; then
+        if gcloud artifacts repositories describe ${_SERVICE_NAME} >/dev/null 2>&1; then
           echo "Repository exists."
         else
           echo "Repository does not exist. Creating..."
-          gcloud artifacts repositories create us-central1-docker.pkg.dev/insurance-hub-397016/${_SERVICE_NAME} --repository-format=docker \
+          gcloud artifacts repositories create ${_SERVICE_NAME} --repository-format=docker \
             --location=us-central1 --project=insurance-hub-397016
         fi
   # Build and push the Docker image
